@@ -10,9 +10,9 @@ import com.ufape.finproservice.model.IncomeCategory;
 import com.ufape.finproservice.model.UserEntity;
 import com.ufape.finproservice.repository.IncomeCategoryRepository;
 import com.ufape.finproservice.repository.IncomeRepository;
-import com.ufape.finproservice.repository.UserRepository;
+import com.ufape.finproservice.util.CurrentUserService;
 import lombok.AllArgsConstructor;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -20,17 +20,19 @@ import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static com.ufape.finproservice.specification.IncomeSpecifications.*;
+
 @Service
 @AllArgsConstructor
 public class IncomeService {
 
     private final IncomeRepository incomeRepository;
-    private final UserRepository userRepository;
     private final IncomeCategoryRepository incomeCategoryRepository;
+    private final CurrentUserService currentUserService;
     private final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
     public IncomeResponseDTO createIncome(IncomeDTO incomeDTO) {
-        UserEntity user = getCurrentUser();
+        UserEntity user = currentUserService.getCurrentUser();
 
         IncomeCategory category = incomeCategoryRepository.findById(incomeDTO.getIncomeCategoryId())
                 .orElseThrow(() -> new CustomException(ExceptionMessage.INCOME_CATEGORY_NOT_FOUND));
@@ -49,14 +51,14 @@ public class IncomeService {
     }
 
     public List<IncomeResponseDTO> findAllUserIncomes() {
-        UserEntity user = getCurrentUser();
+        UserEntity user = currentUserService.getCurrentUser();
         return incomeRepository.findByUserId(user.getId()).stream()
                 .map(IncomeMapper::toIncomeResponseDTO)
                 .collect(Collectors.toList());
     }
 
     public List<IncomeResponseDTO> findIncomesByPeriod(String startDateStr, String endDateStr) {
-        UserEntity user = getCurrentUser();
+        UserEntity user = currentUserService.getCurrentUser();
         LocalDate startDate = LocalDate.parse(startDateStr, dateFormatter);
         LocalDate endDate = LocalDate.parse(endDateStr, dateFormatter);
         
@@ -95,7 +97,7 @@ public class IncomeService {
 
     public List<IncomeResponseDTO> findIncomesByCategory(Long categoryId) {
 
-        UserEntity user = getCurrentUser();
+        UserEntity user = currentUserService.getCurrentUser();
 
         incomeCategoryRepository.findById(categoryId)
                 .orElseThrow(() -> new CustomException(ExceptionMessage.INCOME_CATEGORY_NOT_FOUND));
@@ -106,24 +108,29 @@ public class IncomeService {
                 .collect(Collectors.toList());
     }
 
-    public List<IncomeResponseDTO> findAllIncomesByCategory(Long categoryId) {
-        incomeCategoryRepository.findById(categoryId)
-                .orElseThrow(() -> new CustomException(ExceptionMessage.INCOME_CATEGORY_NOT_FOUND));
+    public List<IncomeResponseDTO> findAllIncomes(Long categoryId, LocalDate startDate, LocalDate endDate) {
+        UserEntity user = currentUserService.getCurrentUser();
 
-        List<Income> incomes = incomeRepository.findByIncomeCategoryId(categoryId);
-        return incomes.stream()
+        Specification<Income> spec = Specification.allOf(
+                belongsToUser(user),
+                hasCategory(categoryId)
+        );
+
+        if (startDate != null) {
+            spec = spec.and(dateOnOrAfter(startDate));
+        }
+        if (endDate != null) {
+            spec = spec.and(dateOnOrBefore(endDate));
+        }
+
+        return incomeRepository.findAll(spec)
+                .stream()
                 .map(IncomeMapper::toIncomeResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    private UserEntity getCurrentUser() {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        return userRepository.findByEmail(username)
-               .orElseThrow(() -> new CustomException(ExceptionMessage.USER_NOT_FOUND));
+                .toList();
     }
 
     private void validateUserOwnership(Income income) {
-        UserEntity currentUser = getCurrentUser();
+        UserEntity currentUser = currentUserService.getCurrentUser();
         if (!income.getUser().getId().equals(currentUser.getId())) {
             throw new CustomException(ExceptionMessage.INCOME_NOT_OWNED);
         }
